--- a/client/views/elections/electionsChoice.html
+++ b/client/views/elections/electionsChoice.html
@@ -5,7 +5,8 @@
 	<div class="choicename">
 	  {{name}}
  </div>
- <div class="profilepic" style="background-image:url({{profileImage}})" />
+ <div class="profilepic" style="background-image:url({{profileImage}})" >
+ </div>
  <div class="description">
   {{description}}
  </div>
