--- a/client/views/groups/groupsList.html
+++ b/client/views/groups/groupsList.html
@@ -1,5 +1,5 @@
 <template name="groupsList">
-  Groups: </br>
+  Groups: <br />
   <table border="1" class="table table-striped table-bordered table-hover table-condensed">
   {{#each groups}}
     {{#if notModifying}}
