--- a/client/views/includes/footer.html
+++ b/client/views/includes/footer.html
@@ -11,12 +11,12 @@
     </small>
     </p>
     <p>
-    <small>
-      <a href="/about">More About This Project </a> | 
-      {{#if loggedIn}}
-        <a id="logoutFoot" href="#">Logout</a>
-      {{/if}}
-    </small>
+      <small>
+        <a href="/about">More About This Project </a> 
+        {{#if loggedIn}}
+          | <a id="logoutFoot" href="#">Logout</a>
+        {{/if}}
+      </small>
     </p>
-	   </div>
+ </div>
 </template>
