--- a/client/views/includes/home.html
+++ b/client/views/includes/home.html
@@ -6,7 +6,7 @@
         <div class="ballots">
           You have {{ballotCount}} open ballots.
         </div>
-        <button id="logout" type="button" class="account" id="logout" href="#">Logout</button><br/>
+        <button id="logout" type="button" class="account" href="#">Logout</button><br/>
       {{else}}
         <div class="ballots">
           You have {{ballotCount}} open ballots.
@@ -45,6 +45,4 @@
       </div>
     </div>
   {{/if}}
-  
-
 </template>
