stepping through ballot rudimentarily working

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -16,6 +16,8 @@ text-black = #4F4F4F
 thick = 700
 thin = 400
 
+html, body, div, a
+  color: black !important
 body
 	color: white
 	text-align: center
