Smarter Homepage Styling

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -38,16 +38,17 @@ body
 	height: 100%
 
 h1
-	font-size: 4em
-	position: absolute
+	font-size: 6em
+	position: relative
 	top: 40%
 	width: 100%
 
 #login-button
 	position: relative
 	top: 60%
+	font-size: 1.3em
 	margin: 0 auto
-	border: 2px solid
+	border: 1px solid
 	padding 5px 100px
 
 @media screen and (max-width: 480px)
