Splash page vertal center redone.

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -16,8 +16,8 @@ text-black = #4F4F4F
 thick = 700
 thin = 400
 
-html, body, div, a
-  color: black !important
+// html, body, div, a
+//   color: black !important
 body
 	color: white
 	text-align: center
@@ -42,16 +42,22 @@ body
 h1
 	font-size: 6em
 	position: relative
-	top: 40%
 	width: 100%
+	padding-bottom: 30px
 
 #login-button
-	position: relative
-	top: 60%
 	font-size: 1.3em
-	margin: 0 auto
 	border: 1px solid
 	padding 5px 100px
+
+#login-info
+	height: 150px
+	position: absolute
+	top: 0
+	right: 0
+	left: 0
+	bottom: 0
+	margin: auto
 
 @media screen and (max-width: 480px)
 	h1
