Ballot list CSS started.

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -20,12 +20,17 @@ thin = 400
 //   color: black !important
 body
 	color: white
+	background-color: darkest-blue
 	text-align: center
 
 .purple-bg
 	background-color: purple
 
+.green-bg
+	background-color: green
+
 #container
+	text-transform: uppercase
 	position: absolute
 	min-width: 320px
 	width: 100%
@@ -49,6 +54,14 @@ h1
 	font-size: 1.3em
 	border: 1px solid
 	padding 5px 100px
+
+.election-list-item
+	padding: 10px 0
+	font-size: 2em
+	h3
+		display: inline-block
+	.right-arrow
+		float: right
 
 #login-info
 	height: 150px
