validators working across the board

--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -29,8 +29,20 @@ body{
 	text-align:center;
 	font-size: 1.5em;
 	margin-top: 10px;
-
 }
+
+.valid {
+  color: green !important
+}
+
+.invalid {
+  color: red !important
+}
+
+.current {
+  border: solid 1px black;
+}
+
 .account{
 	height: 50px;
 	width: 200px;
