removed old templates

--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -1,337 +1,23 @@
-html{
-}
+#header
+  padding-bottom: 10px
+  padding-top: 10px
+  background: black
+  color:white
+  font-size:2em
+  min-height: 100%
+  a
+    color: white !important
+    text-decoration: none
 
-body{
-	font-family: 'Montserrat', sans-serif;
-}
-
-/* New Styles */
-
-#header{
-	padding-bottom: 10px;
-	padding-top: 10px;
-	background: black;
-	color:white;
-	font-size:2em;
-	min-height: 100%;
-}
-
-#nyuvote{
-	text-align: left;
-	font-size: 2em;
-	line-height: 1em;
-	margin-left: 20px;
-}
-.smaller{
-	font-size:0.8em;
-}
-.loginsection{
-	text-align:center;
-	font-size: 1.5em;
-	margin-top: 10px;
-}
-
-.valid {
-  color: green !important
-}
-
-.invalid {
-  color: red !important
-}
-
-.current {
-  border: solid 1px black;
-}
-
-.account{
-	height: 50px;
-	width: 200px;
-	height:50px;
-	color: white;
-	background: rgb(82,46,145);
-	border: none;
-	border-radius: 15px;
-  margin: 0 auto;
-	margin-bottom:10px;
-  display: block;
-}
-
-#main{
-	position: relative;
-	color:black;
-	margin-right: auto;
-	margin-left: auto;
-}
-
-#headerbanner{
-	margin-top: 20px;
-}
-.choices{
-	color:white;
-	padding: 0px 50px;
-}
-
-.eachelection{
-	position: relative;
-}
-.electionitem{
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-}
-#electionitem{
-	text-align:right;
-}
-
-.electiontitle{
-	text-align: center;
-	font-size: 1.5em;
-	background: black;
-	color:white;
-	padding: 10px 10px 20px 10px;
-}
-
-
-.questiontitle{
-	background: rgb(82,46,145);
-	color: white;
-	padding: 10px 10px 20px 10px;
-	text-align:center;
-}
-.arrowdownblack{
-	border-left: 30px solid transparent;
-	border-right: 30px solid transparent;
-	width:0;
-	border-top: 20px solid rgb(82,46,145);
-	position: relative;
-	margin-top: -40px;
-	margin-right: auto;
-	margin-left: auto;
-	top: 40px;
-}
-.arrowdownpurple{
-	border-left: 30px solid transparent;
-	border-right: 30px solid transparent;
-	width:0;
-	border-top: 20px solid black;
-	position: relative;
-	margin-right: auto;
-	margin-left: auto;
-}
-.questiondescription{
-	margin-top: 60px;
-	text-align: center;
-	font-size: 1.2em;
-}
-.questionsbox{
-	font-size:1.8em;
-	text-align: center;
-}
-.electiondescription{
-	font-size: 1.2em;
-	text-align: center;
-	padding: 20px 50px;
-	background:white;
-}
-
-.choicename{
-	font-size: 1.6em;
-	margin-bottom:15px;
-}
-.profilepic{
-	max-width: 100%;
-  height: 300px;
-	border-radius: 50px;
-  margin: 20px auto;
-	display: block;
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-}
-
-.profilebox{
-	position: relative;
-	text-align: center;
-	margin-top: 30px;
-	padding: 50px 50px;
-	height: 100%;
-	border: 2px solid white;
-  &:hover {
-    cursor: pointer
-  }
-
-}
-.profileblur{
-	height: 100%;
-	background: rgba(0,0,0,0.8);
-	width: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-	z-index: -9999;
-	-webkit-filter: blur(1px);
-	-moz-filter: blur(1px);
-	-o-filter: blur(1px);
-	-ms-filter: blur(1px);
-	filter: blur(1px);
-
-}
-.description{
-	font-size:1em;
-	width:100%;
-	text-align:left;
-	margin-top:15px;
-}
-
-.position{
-	font-size: 2.5em;
-	margin-left: 52px;
-}
-h5{
-	font-size:2em;
-}
-h6 {
-  font-size: 1.2em
-  }
-.buttons{
-	margin-bottom:20px;
-	text-align:center;
-	margin-top: 30px;
-
-}
-.submit{
-	height: 50px;
-	font-size: 1.5em;
-	width: 300px;
-	height:50px;
-	color: white;
-	background: black;
-	border: none;
-	border-radius: 15px;
-}
-
-#footer{
-	background: #000;
-	color: #fff;
-	text-align: center;
-	position: absolute;
-	width: 100%;
-	height: 100px;
-	padding-top: 10px;
-  p {
-    padding-top: 2px;
-    padding-bottom: 2px;
-    font-weight: 300;
-  }
-}
-
-.ballots{
-	text-align: center;
-	font-size: 1.8em;
-	line-height: 2.3em;
-	background:rgb(82,46,145);
-	color:white;
-}
-
-.chosen {
-  background-color: rgba(82,46,145,0.4);
-}
-
-@media screen and (max-width:786px){
-	.profilebox{
-		height: auto;
-	}
-}
-.splash {
-  position: relative;
-  text-align: center;
-  color: white;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  padding: 20px
-  button {
-    margin-top: 20px
-    margin-bottom: 20px
-    height: 50px;
-    width: 200px;
-    height:50px;
-    color: white;
-    background: rgb(82,46,145);
-    border: none;
-    border-radius: 15px;
-  }
-}
-
-.vote {
-  display: block;
-  margin: 30px auto;
-}
-
-.vote-error {
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-@media (max-width : 768px){
-  .splash {
-    margin-left: 16.666666%
-  }
-}
-.splash {
-  p {
-    margin: 10px 0px;
-    font-weight: 300;
-
-  }
-}
-
-small {
-  font-size: 0.9em;
-  }
-
-#logout {
-  margin-top: 30px;
-  width: 300px;
-}
-
-.bigLoad {
+#footer
+  background: #000
+  color: #fff
   text-align: center
-  h1 {
-    color: #522E91
-    font-size: 2.5em
-    margin-bottom: 20px
-    margin-top: 20px
-  }
-  img {
-    height: 100px
-    margin: 0 auto;
-    display: block
-  }
-}
-
-.about {
-  text-align: left;
-}
-
-#header {
-    a {
-        color: white !important
-        text-decoration: none
-    }
-
-  }
-.row {
-  margin-left: 0px
-  margin-right: 0px
-}
-
-.choice, .abstain {
-    filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
-    filter: gray; /* IE6-9 */
-    -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
-}
-
-.chosen {
-  filter: none;
-  -webkit-filter: none;
-}
+  position: absolute
+  width: 100%
+  height: 100px
+  padding-top: 10px
+  p
+    padding-top: 2px
+    padding-bottom: 2px
+    font-weight: 300
