--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -28,6 +28,15 @@ body
 .light-green-bg
 	background-color: light-green
 
+.valid
+  color: green !important
+
+.invalid
+  color: red !important
+
+.current
+  border: solid 1px black
+
 #container
 	text-transform: uppercase
 	position: absolute
