--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -10,6 +10,7 @@ green = #5EB955
 blue = #0CACA9
 light-blue = #55B7B6
 darkest-blue = #549090
+deep-blue = #005858
 
 text-black = #4F4F4F
 light-grey = #c2c2c2
@@ -31,6 +32,12 @@ body
 	color: text-black
 .dark-blue-bg
 	background-color darkest-blue
+.deep-blue-bg
+	background-color deep-blue
+.light-blue-bg
+	background-color light-blue
+.green-bg
+	background-color green
 
 .header
 	height: 30px
@@ -80,6 +87,11 @@ body
 			color light-grey
 			position absolute
 			display block
+	.body-text
+		font-family: lato
+		text-transform: none
+		font-weight 300
+		margin 20px 0
 
 .content-wrapper
 	height: 100%
@@ -94,9 +106,12 @@ body
 	bottom: 0
 	margin: auto
 #login-button
+	display block
+	margin 0 auto
 	font-size: 1.3em
 	border: 1px solid
 	padding 5px 100px
+	width: 300px
 
 // ELECTION LIST
 #election-list
@@ -110,6 +125,8 @@ body
 .election-list-item
 	padding: 20px 0
 	position relative
+	&:hover
+		background-color: rgba(255, 255, 255, 0.2)
 	// .ballot-name
 	// 	padding 0 50px
 	h3
@@ -128,14 +145,25 @@ body
 .centered-container
 	max-width 800px
 	margin 0 auto
-	padding-top: 30px
-	padding-bottom: 30px
+	padding 30px 0
 
 //BALLOT DESCRIPTION
 #ballot-description-wrapper
 	margin-top 10%
 	p
 		margin-bottom 30px
+
+//VOTING SCREEN
+.circular-photo
+	height: 200px
+	width: 200px
+	display: inline-block
+	margin-right: 5px
+	overflow: hidden
+	border-radius: 100%
+	background-size: cover
+	background-position: center
+	background-repeat: no-repeat
 
 .small-button
 	border 1px solid
