--- a/client/views/admin/elections/electionsAdminShow.html
+++ b/client/views/admin/elections/electionsAdminShow.html
@@ -11,13 +11,17 @@
           <div class="email-content-controls pure-u-1-2">
               <button class="pure-button {{openCloseClass}} openCloseElection">{{openCloseElection}} Election</button>
               {{#if canEdit}}
+                <button class="pure-button pure-button-primary" disabled>Election Not Started</button>
                 <a href={{pathFor 'adminElectionsEdit'}} class="pure-button
                   button-warning">Edit This Election</a>
-                <button class="pure-button pure-button-primary" disabled>Election Not Started</button>
-              {{else}}
                 <button class="pure-button
-                  button-warning" disabled>Election Locked</button>
+                  button-error">Delete Election</button>
+              {{else}}
                 <button class="pure-button pure-button-primary">View Results</button>
+                <button class="pure-button
+                  button-warning" disabled>Election Locked After First Edit</button>
+                <button class="pure-button
+                  button-error">Delete Election</button>
               {{/if}}
 
           </div>
