--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -69,7 +69,7 @@ body
 		position: relative
 		width: 100%
 		padding-bottom: 30px
-		margin 0 auto
+		margin 0
 	h2 
 		font-size: 2.5em
 		margin 0 auto
