Header now expands based on title length.

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -42,7 +42,6 @@ body
 	background-color: #F0B1B4
 
 .header
-	height: 30px
 	line-height: 30px
 	vertical-align: middle
 
@@ -82,15 +81,14 @@ body
 		text-decoration: none
 
 	.header
-		height: 30px
-		line-height: 30px
+		padding: 0 75px
 		vertical-align: middle
-		padding: 0 30px
+		word-break normal
+		white-space normal
 		a
-			float left
 			color light-grey
 			position absolute
-			display block
+			left 20px
 	.body-text
 		font-family: lato
 		text-transform: none
