--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -108,6 +108,13 @@ body
 	left: 0
 	bottom: 0
 	margin: auto
+	h1
+		padding-bottom 15px
+	#login-caption
+		font-family lato
+		font-weight 300
+		text-transform none
+		margin 0
 .large-button
 	margin 0 auto
 	font-size: 1.3em
