--- a/client/views/admin/elections/electionsAdminResults.html
+++ b/client/views/admin/elections/electionsAdminResults.html
@@ -9,7 +9,7 @@
               </p>
           </div>
           <div class="email-content-controls pure-u-1-2">
-            <a href={{pathFor 'adminElectionsShow'}} class="pure-button button-success" disabled>Back to
+            <a href={{pathFor 'adminElectionsShow'}} class="pure-button button-success">Back to
               Info</a>
               {{#if canEdit}}
                 <a href={{pathFor 'adminElectionsEdit'}} class="pure-button
@@ -48,6 +48,11 @@
                   <tr><td>Description</td><td>{{description}}</td></tr>
                   <tr><td>Votes</td><td>{{votes _id ../_id ../../votes }}</td></tr>
                 {{/each}}
+                {{#if allowAbstain}}
+                  <tr class="pure-table-odd"><td>Name</td><td>Abstain</td></tr>
+                  <tr><td>Description</td><td>Abstaining From This Vote</td></tr>
+                  <tr><td>Votes</td><td>{{votes "abstain" _id ../votes }}</td></tr>
+                {{/if}}
             </tbody>
           </table>
           <br/>
