patched hole in submitting ballots for elections user cannot validly participate in. Added about

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -108,9 +108,11 @@ body
 	left: 0
 	bottom: 0
 	margin: auto
+	.light-grey
+		color: light-grey
 	h1
 		padding-bottom 15px
-	#login-caption
+	.login-caption
 		font-family lato
 		font-weight 300
 		text-transform none
@@ -246,3 +248,11 @@ body
 		#voting-screen
 			.centered-container
 				padding 10px 20px
+
+.about
+	#login-info
+		height: 600px
+	p
+		max-width: 50%
+		margin: 0 auto !important
+
