--- a/client/views/admin/adminMaster.html
+++ b/client/views/admin/adminMaster.html
@@ -17,7 +17,7 @@
                         class="switch-group {{#if isElections}}{{else}}bold{{/if}}">
                        <span class="email-label-travel"></span> Groups <span
                           class="email-count">({{groupsCount}})</span></a></li>
-                      <li><a href="#">Logout</a></li>
+                      <li><a href="#" class="admin-logout">Logout</a></li>
                   </ul>
               </div>
           </div>
