simplified admin screens

--- a/client/views/admin/elections/electionsAdminModify.html
+++ b/client/views/admin/elections/electionsAdminModify.html
@@ -14,6 +14,8 @@
             {{else}}
               <button class="pure-button button-success" disabled>Election
                 Locked After First Open</button>
+              <button class="pure-button
+                button-warning reset-election">Reset Election</button>
             {{/if}}
               <a href={{pathFor 'adminElectionsShow'}} class="pure-button
                 pure-button-primary">Cancel Edit Election</a>
