Footer size decreases for mobile.

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -265,5 +265,17 @@ body
 				padding-bottom 0
 				margin 0
 		#voting-screen
+			padding-bottom: 105px
 			.centered-container
-				padding 10px 20px
+				padding-bottom 10
+			#election-footer
+				height 100px
+				padding 3px 0px 0px 0px
+				p
+					font-size 1.2em
+				.large-button
+					padding 2px 20px
+				.progress-circle
+					margin 0px 3px
+			#election-footer-button
+				padding 0 20px
