Progress bar for desktop fixed

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -239,6 +239,8 @@ body
 		border-radius 50%
 	#election-footer-wrapper
 		padding 0
+	#election-footer-button
+		padding 0px 20px
 
 //REVIEW SCREEN
 #review-screen
